fix close button on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -43,17 +43,6 @@
   border-color: transparent;
 }
 
-/* .modal__close {
-  background: transparent url("../images/exit-Icon.svg") center no-repeat;
-  width: 40px;
-  height: 40px;
-  border: none;
-  position: absolute;
-  top: 0;
-  right: -52.5px;
-  opacity: 1;
-} */
-
 .modal__close-btn_type_preview {
   background: transparent url("../images/exit-Icon.svg") center no-repeat;
   width: 40px;
@@ -209,7 +198,7 @@
     line-height: 1;
   }
 
-  .modal__close_type_preview {
+  .modal__close-btn {
     top: -42.5px;
     right: 0;
   }
